# n_bit_binary

./: README.md  n_bit_binary.py  pyproject.toml
.github/workflows/: python-publish.yml
n_bit_binary/: __init__.py  n_bit_binary.py
tests/: test_n_bit_binary.py
