[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "n_bit_binary"
version = "0.1.1"
authors = [
    {name="Griffin Skudder", email="griffin@skudder.co.nz"}
]
description = "A package for working with integers as binary arrays"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/griffinskudder/n_bit_binary"
Issues = "https://github.com/griffinskudder/n_bit_binary/issues"
